--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,16 @@
+* {
+  margin: 0;
+}
+
 .App {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     padding: 41px 52px 20px 48px;
     background: #FAFAFA;
-    margin: 0;
     height: 100vh;
-  }
+}
 
 .app__title {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 26px;
     line-height: 32px;
     color: #222222;
