--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -30,6 +30,7 @@
 
 .card__name {
     width: 42%;
+    font-family: 'Roboto', sans-serif;
     font-size: 13px;
     line-height: 15px;
     color: #474747;
@@ -39,6 +40,7 @@
 
 
 .card__type {
+    font-family: 'Roboto', sans-serif;
     font-size: 12px;
     line-height: 14px;
     color: #5C5C5C;
@@ -47,6 +49,7 @@
 }
 
 .card__status {
+    font-family: 'Roboto', sans-serif;
     font-size: 12px;
     line-height: 14px;
     width: 6.69%;
@@ -67,6 +70,7 @@
 }
 
 .card__url {
+    font-family: 'Roboto', sans-serif;
     font-size: 12px;
     line-height: 14px;
     color: #5C5C5C;
@@ -76,6 +80,7 @@
 }
 
 .card__btn {
+    font-family: 'Montserrat', sans-serif;
     border-radius: 10px;
     border: none;
     width: 10.25%;
@@ -84,6 +89,11 @@
     color: white;
     text-decoration: none;
     text-align: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .card__btn_grey {
