--- a/src/components/SearchFormError/SearchFormError.css
+++ b/src/components/SearchFormError/SearchFormError.css
@@ -1,5 +1,5 @@
 .search-error {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 15%;
     display: flex;
     flex-direction: column;
@@ -7,6 +7,7 @@
 }
   
 .search-error__title {
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     line-height: 22px;
     font-style: normal;
@@ -15,6 +16,7 @@
 }
   
 .search-error__btn {
+    font-family: 'Montserrat', sans-serif;
     width: 95px;
     height: 30px;
     background: #2EE5AC;
